# djanco

./: .gitignore  Cargo.toml  README.md  capabilities.md  comparison.csv  djanco_primer.md  encountered_languages.notes  errors.txt  grammar.ebnf  out.txt
examples/: .gitignore  Cargo.toml  README.md
examples/src/: canned_queries.rs  lib.rs
ghql/: .gitignore  Cargo.toml  grammar.ebnf
ghql/src/: lib.rs  printer.rs
loader/: Cargo.toml
loader/src/: api.rs  api_extensions.rs  iterators.rs  lib.rs  mockdb.rs  preprocess.rs  selectors.rs
select/: .gitignore  Cargo.toml  timing.txt
select/src/: attrib.rs  cachedb.rs  commit.rs  csv.rs  csv2.rs  data.rs  djanco.rs  dump.rs  dump_.rs  helpers.rs  io.rs  lib.rs  lib__.rs  log.rs  meta.rs  mockdb.rs  names.rs  objects.rs  path.rs  persistence.rs  project.rs  prototype.rs  pythagorean.rs  query.rs  receipt.rs  require.rs  retrieve.rs  sample.rs  selectors.rs  stats.rs  time.rs  user.rs
select/src/_bin/: sandbox.rs
src/: ast.rs  attrib.rs  barrier.rs  commandline.rs  commit.rs  countable.rs  csv.rs  data.rs  dump.rs  examples.rs  fraction.rs  grammar.lalrpop  io.rs  iterators.rs  lib.rs  log.rs  main.rs  metadata.rs  objects.rs  ordf64.rs  persistence.rs  persistent.rs  piracy.rs  pramen.rs  product.rs  query.rs  receipt.rs  require.rs  sample.rs  source.rs  spec.rs  testing.rs  time.rs  tuples.rs  user.rs  utils.rs  weights_and_measures.rs
src/database/: cache.rs  data.rs  extractors.rs  lazy.rs  metadata.rs  mod.rs  persistent.rs  source.rs
src/query/: project.rs
src_old/: djanco.rs  log.rs  prototype.rs
