[package]
name = "djanco"
version = "0.3.0"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.2.11"
itertools = "0.9.0"
structopt = "0.3.16"
rand = "0.7.3" # for distributions and sampling
rand_pcg = "0.2.1" # for specific/better RNG implementations
seq = "0.5.0"
clap = "2.27.1" # for arg_enum macro
regex = "1.3.9"
git2 = "0.13" # for hash in mockdb
byteorder = "1.3.4"
chrono = "0.4.19"
mashup = "0.1.12" # for some macros in data
serde = { version = "1.0.120", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.59"
bstr = "0.2.14" # for Vec<u8>::to_str_lossy
csv = "1.1.4"
parasite = { path = "../parasite" }
#parasite = { git = "https://github.com/PRL-PRG/codedj-parasite.git", branch = "master" }
anyhow = "1.0.38"