[package]
name = "djanco"
version = "0.3.4"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"           # error handling utilities
itertools = "0.10.0"        # misc iterator utils
chrono = "0.4.19"           # various time/dates
bstr = "0.2.14"             # Vec<u8>::to_str_lossy

mashup = "0.1.12"           # some macros in data,  metaprogramming: allows constructing idents in macros
delegate = "0.5.1"          # delegate methods from Database to Data  

rand = "0.8.3"              # distributions and sampling in queries
rand_pcg = "0.3.0"          # specific/better RNG implementations in queries
regex = "1.3.9"             # regular expressions in queries?
csv = "1.1.4"               # parsing CSV input and writing CSV output from queries

clap = "3.0.0-beta.2"       # command line options

tempfile = "3.2.0"          # creating temporary files (when running archived queries)
fs_extra = "1.2.0"          # copying directories

git2 = "0.13"               # hash in mockdb and utils
git2_credentials = "0.7.1"  # logging in to github with ssh (when running archived queries)

serde = { version = "1.0.120", features = ["derive"] } # caching
serde_cbor = "0.11.1"                                  # caching
serde_json = "1.0.59"                                  # parsing JSON metadata gathered from GH

parasite = { git = "https://github.com/PRL-PRG/codedj-parasite.git" }