[package]
name = "examples"
version = "0.1.0"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dcd    = { path = "../../dejacode-downloader/" }                  # https://github.com/PRL-PRG/dejacode-downloader
select = { path = "../select" }
itertools = "0.9.0"
structopt = "0.3.16"
rand      = "0.7.3"
rand_pcg  = "0.2.1"