[package]
name = "ghql"
version = "0.1.0"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.18.1", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.18.1"
glob = "0.2.11"