[package]
name = "select"
version = "0.2.0"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dcd  = { path = "../../dejacode-downloader/" }                  # https://github.com/PRL-PRG/dejacode-downloader
ghql = { path = "/home/kondziu/Workspace/GHQL" }                # https://github.com/kondziu/GHQL
glob = "0.2.11"
itertools = "0.9.0"
structopt = "0.3.16"
